# tool_sphere

./: .gitignore  NEWS.md  deploy.py  pyproject.toml
plugins/patch_creator/: plugin.py
scripts/: deployment.py
tool_sphere/: __init__.py  __main__.py  application.py  main_window.py
tool_sphere/delegates/: __init__.py  sidebar.py  tools.py
tool_sphere/models/: __init__.py  sidebar.py  tools.py
tool_sphere/widgets/: __init__.py  sidebar.py  tools.py
